--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'com.example'
 version = '2.0'
 sourceCompatibility = '11'
+jar.baseName="spring-gumball"
 
 configurations {
 	compileOnly {
